SyntacticAnalyzer/tests/fail/metodos_dynamic.java
class A {
 dynamic void f1();
 dynamic void f2();
 dynamic int f3(char c);
}
